--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ body {
 .header input {
 	display: inline-block !important;
 	font-size: 120%;
-	background-image: url('../images/inventory_searchicon.png'); 
+	background-image: url('./inventory_searchicon.png'); 
     background-position: 10px 12px; 
     background-repeat: no-repeat; 
     width: 100%; /* Full-width */
